restore files from glacier if needed